2011-01-14 Murray Cumming <murrayc@murrayc.com>

  Use the m4 convert files from atkmm and pangomm instead of repeating them.

  * configure.ac: Discover the path of the pangomm and atkmm m4 files for use
  instead of repeating them here.
  * tools/m4: Remove convert_pango.m4 and convert_atk.m4.

2011-01-14 Murray Cumming <murrayc@murrayc.com>

  Depend on necessary versions of atkmm and pangomm.

  * configure.ac: Depend on the versions of atkmm and pangomm that provide
  conversions in .m4 files, now that glibmm does not provide them implicitly.
  This is only relevant when building from git, however. The older versions
  would be OK when building from a tarball.

2010-01-14 José Alburquerque <jaalburqu@svn.gnome.org>

  _CLASS_GTKOBJECT: Remove __REAL_* additional arguments.
  
  * tools/m4/class_gtkobject.m4: Remove the use of the
  __REAL_[CNAME|CPARENT]__ variables needed to wrap some classes in
  gtkmm that were typedef to their base type (such as GdkWindow and
  GdkPixmap). These classes have been fixed in gtk+-3 thus eliminating
  the need for the special arguments in _CLASS_GTKOBJECT.

2010-01-14 Murray Cumming <murrayc@murrayc.com>

  Added class_gtkobject.m4, previously in glibmm.
  
  * tools/m4/class_gtkobject.m4: Added this, so we can use _CLASS_GTKOBJECT.
  * tools/m4/filelist.m4: Mentioned the new file.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Regenerated function defs.

	* gdk/src/gdk_methods.defs:
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/aboutdialog.hg: Use the changed conversion from gtkmm 3.0 which 
	avoids the need to edit the generated .defs file.
	
2011-01-11  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

  Widget::set_window(): Increase the ref count of the Gdk::Window.

  * gdk/src/widget.[hg|ccg]: set_window() increases the ref count of the
  Gdk::Window, since gtk_widget_set_window() does not.
  
  Bug #606903 (Hammered)

2011-01-11  Murray Cumming  <murrayc@murrayc-x61>
