@@ -1,3 +1,10 @@
+2011-01-14  Murray Cumming  <murrayc@murrayc.com>
+
+	Restore support for the extra _CLASS_GOBJECT() parameter.
+
+	* tools/m4/class_gtkobject.m4: This is still needed for the weird GtkWindow
+	declaration in gtk+-2.0, though that is fixed in gtk+-3.0.
+
 2011-01-14 Murray Cumming <murrayc@murrayc.com>
 
   Use the m4 convert files from atkmm and pangomm instead of repeating them.
